Første commit af BatchData WS wsdl+skema, kun GetMedicineCardDataForDeceasedPersons er med

--- a/build.xml
+++ b/build.xml
@@ -330,6 +330,8 @@
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E5"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E6"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2022_01_01"/>
+		
+		<organize-schemas-macro wsdlname="BatchData" versiondate="2022_02_01"/>
 
 		<copy todir="${standard.target.dir}">
 			<fileset dir="${standard.target.dir}/gensrc/META-INF" includes="schemas/**"/>
@@ -545,6 +547,7 @@
         <codegen wsdlfilename="${standard.target.dir}/wsdl/EffectuationOrdering-inline_2015_01_01_E5.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/DumpRestore-inline_2013_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/DumpRestore-inline_2019_09_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+        <codegen wsdlfilename="${standard.target.dir}/wsdl/BatchData-inline_2022_02_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <!-- IMPORTANT: whenever a new <codegen> element regarding a new wsdl-file is added to this section, remember to add an <exec>-element validating the wsdl in the "validate-wsdl" target below -->
 
         <copy todir="${standard.target.dir}/gentestsrc" encoding="${codegen-encoding}" outputencoding="UTF-8">
@@ -709,6 +712,8 @@
 
 		<validatewsdl-macro wsdlfilename="DumpRestore-inline_2013_01_01"/>
         <validatewsdl-macro wsdlfilename="DumpRestore-inline_2019_08_01"/>
+		
+		<validatewsdl-macro wsdlfilename="BatchService-inline_2022_02_01"/>
 	</target>
 	
 	<target name="generate-nsf-wsdl" depends="generate">
