FMK-7175 Tilføjet ListDoseDispensingPatients

--- a/build.xml
+++ b/build.xml
@@ -468,7 +468,7 @@
         </exec>
 
         <mkdir dir="${target.admin.dir}/classes"/>
-        <javac debug="true" destdir="${target.admin.dir}/classes" encoding="UTF-8">
+        <javac classpathref="classpath" debug="true" destdir="${target.admin.dir}/classes" encoding="UTF-8">
             <src path="${target.admin.dir}/src"/>
         </javac>
 
@@ -502,7 +502,7 @@
         </exec>
 
         <mkdir dir="${target.testtool.dir}/classes"/>
-        <javac debug="true" destdir="${target.testtool.dir}/classes" encoding="UTF-8">
+        <javac classpathref="classpath" debug="true" destdir="${target.testtool.dir}/classes" encoding="UTF-8">
             <src path="${target.testtool.dir}/src"/>
         </javac>
 
