--- a/build.xml
+++ b/build.xml
@@ -333,6 +333,8 @@
 		
 		<organize-schemas-macro wsdlname="BatchData" versiondate="2022_02_01"/>
 
+        <organize-schemas-macro wsdlname="DosageAI" versiondate="2022_03_01"/>
+
 		<copy todir="${standard.target.dir}">
 			<fileset dir="${standard.target.dir}/gensrc/META-INF" includes="schemas/**"/>
 		</copy>
@@ -389,6 +391,13 @@
                  description="Dist collection for Advis for eCPR2"
                  update="false"
                  basedir="${standard.target.dir}/wsdl" includes="ECPR2Advis*-collection.zip"/>
+
+        <!-- Dist collection for DosageAI -->
+        <property name="dosageAI_dist_file" value="${target.dir}/wsdl/DosageAI-collection-dist.zip"/>
+        <zip destfile="${dosageAI_dist_file}"
+             description="Dist collection for DosageAI"
+             update="false"
+             basedir="${standard.target.dir}/wsdl" includes="DosageAI-collection.zip"/>
 
         <dist_zips-macro version-yymmdd="2013_06_01" version="1.4.2"/>
         <dist_zips-macro version-yymmdd="2015_01_01" version="1.4.4"/>
@@ -548,6 +557,7 @@
         <codegen wsdlfilename="${standard.target.dir}/wsdl/DumpRestore-inline_2013_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/DumpRestore-inline_2019_09_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/BatchData-inline_2022_02_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+        <codegen wsdlfilename="${standard.target.dir}/wsdl/DosageAI-inline_2022_03_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <!-- IMPORTANT: whenever a new <codegen> element regarding a new wsdl-file is added to this section, remember to add an <exec>-element validating the wsdl in the "validate-wsdl" target below -->
 
         <copy todir="${standard.target.dir}/gentestsrc" encoding="${codegen-encoding}" outputencoding="UTF-8">
@@ -712,8 +722,10 @@
 
 		<validatewsdl-macro wsdlfilename="DumpRestore-inline_2013_01_01"/>
         <validatewsdl-macro wsdlfilename="DumpRestore-inline_2019_08_01"/>
-		
+
 		<validatewsdl-macro wsdlfilename="BatchService-inline_2022_02_01"/>
+
+        <validatewsdl-macro wsdlfilename="DosageAI-inline_2022_03_01"/>
 	</target>
 	
 	<target name="generate-nsf-wsdl" depends="generate">
