fix dosage AI dist file name

--- a/build.xml
+++ b/build.xml
@@ -393,11 +393,11 @@
                  basedir="${standard.target.dir}/wsdl" includes="ECPR2Advis*-collection.zip"/>
 
         <!-- Dist collection for DosageAI -->
-        <property name="dosageAI_dist_file" value="${target.dir}/wsdl/DosageAI-collection-dist.zip"/>
+        <property name="dosageAI_dist_file" value="${target.dir}/wsdl/DosageAI_2022_03_01-collection-dist.zip"/>
         <zip destfile="${dosageAI_dist_file}"
              description="Dist collection for DosageAI"
              update="false"
-             basedir="${standard.target.dir}/wsdl" includes="DosageAI-collection.zip"/>
+             basedir="${standard.target.dir}/wsdl" includes="DosageAI_2022_03_01-collection.zip"/>
 
         <dist_zips-macro version-yymmdd="2013_06_01" version="1.4.2"/>
         <dist_zips-macro version-yymmdd="2015_01_01" version="1.4.4"/>
