--- a/build.xml
+++ b/build.xml
@@ -304,6 +304,18 @@
         <zip destfile="${standard.target.dir}/wsdl/ECPR2Advis-collection.zip"
              basedir="${standard.target.dir}/wsdl/ECPR2Advis"/>
 
+        <java classname="dk.medicinkortet.xmlschema.SchemaLoader" fork="true" failonerror="true" jvmargs="-Xmx1024m" dir="${standard.work.dir}">
+            <classpath>
+                <path location="${build.dir}"/>
+                <fileset dir="lib/build" excludes="*gwt*"/>
+            </classpath>
+            <sysproperty key="target.dir" value="${standard.target.dir}"/>
+            <sysproperty key="WsdlName" value="DosageAI_2022_03_01"/>
+        </java>
+        <zip destfile="${standard.target.dir}/wsdl/DosageAI_2022_03_01-collection.zip"
+             basedir="${standard.target.dir}/wsdl/DosageAI_2022_03_01"/>
+
+    
         <organize-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01"/>
         <organize-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01_E2"/>
         <organize-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01_E5"/>
@@ -331,9 +343,7 @@
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E6"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2022_01_01"/>
 		
-		<organize-schemas-macro wsdlname="BatchData" versiondate="2022_02_01"/>
-
-        <organize-schemas-macro wsdlname="DosageAI" versiondate="2022_03_01"/>
+		<organize-schemas-macro wsdlname="BatchData" versiondate="2022_02_01"/> -->
 
 		<copy todir="${standard.target.dir}">
 			<fileset dir="${standard.target.dir}/gensrc/META-INF" includes="schemas/**"/>
@@ -394,10 +404,15 @@
 
         <!-- Dist collection for DosageAI -->
         <property name="dosageAI_dist_file" value="${target.dir}/wsdl/DosageAI_2022_03_01-collection-dist.zip"/>
+    	<property name="dosageAI_dist_inline_file" value="${target.dir}/wsdl/DosageAI-inline_2022_03_01.zip"/>
         <zip destfile="${dosageAI_dist_file}"
              description="Dist collection for DosageAI"
              update="false"
              basedir="${standard.target.dir}/wsdl" includes="DosageAI_2022_03_01-collection.zip"/>
+    	<zip destfile="${dosageAI_dist_inline_file}"
+    	             description="Dist inline collection for DosageAI"
+    	             update="false"
+    	             basedir="${standard.target.dir}/wsdl" includes="DosageAI-inline_2022_03_01.wsdl"/> 
 
         <dist_zips-macro version-yymmdd="2013_06_01" version="1.4.2"/>
         <dist_zips-macro version-yymmdd="2015_01_01" version="1.4.4"/>
