Fjern fejlagtig halv kommentar fra build.xml

--- a/build.xml
+++ b/build.xml
@@ -343,7 +343,7 @@
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E6"/>
         <organize-schemas-macro wsdlname="MedicineCard" versiondate="2022_01_01"/>
 		
-		<organize-schemas-macro wsdlname="BatchData" versiondate="2022_02_01"/> -->
+		<organize-schemas-macro wsdlname="BatchData" versiondate="2022_02_01"/>
 
 		<copy todir="${standard.target.dir}">
 			<fileset dir="${standard.target.dir}/gensrc/META-INF" includes="schemas/**"/>
