Ret forkert DosageAI inline filnavn

--- a/build.xml
+++ b/build.xml
@@ -310,7 +310,8 @@
                 <fileset dir="lib/build" excludes="*gwt*"/>
             </classpath>
             <sysproperty key="target.dir" value="${standard.target.dir}"/>
-            <sysproperty key="WsdlName" value="DosageAI_2022_03_01"/>
+        	<sysproperty key="VersionDate" value="2022_03_01"/>
+            <sysproperty key="WsdlName" value="DosageAI"/>
         </java>
         <zip destfile="${standard.target.dir}/wsdl/DosageAI_2022_03_01-collection.zip"
              basedir="${standard.target.dir}/wsdl/DosageAI_2022_03_01"/>
