--- a/build.xml
+++ b/build.xml
@@ -311,10 +311,10 @@
             </classpath>
             <sysproperty key="target.dir" value="${standard.target.dir}"/>
         	<sysproperty key="VersionDate" value="2022_03_01"/>
-            <sysproperty key="WsdlName" value="DosageAI"/>
+            <sysproperty key="WsdlName" value="OrdinationsAI"/>
         </java>
-        <zip destfile="${standard.target.dir}/wsdl/DosageAI_2022_03_01-collection.zip"
-             basedir="${standard.target.dir}/wsdl/DosageAI_2022_03_01"/>
+        <zip destfile="${standard.target.dir}/wsdl/OrdinationsAI_2022_03_01-collection.zip"
+             basedir="${standard.target.dir}/wsdl/OrdinationsAI_2022_03_01"/>
 
     
         <organize-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01"/>
@@ -403,17 +403,17 @@
                  update="false"
                  basedir="${standard.target.dir}/wsdl" includes="ECPR2Advis*-collection.zip"/>
 
-        <!-- Dist collection for DosageAI -->
-        <property name="dosageAI_dist_file" value="${target.dir}/wsdl/DosageAI_2022_03_01-collection-dist.zip"/>
-    	<property name="dosageAI_dist_inline_file" value="${target.dir}/wsdl/DosageAI-inline_2022_03_01.zip"/>
-        <zip destfile="${dosageAI_dist_file}"
-             description="Dist collection for DosageAI"
+        <!-- Dist collection for OrdinationsAI -->
+        <property name="ordinationsAI_dist_file" value="${target.dir}/wsdl/OrdinationsAI_2022_03_01-collection-dist.zip"/>
+    	<property name="ordinationsAI_dist_inline_file" value="${target.dir}/wsdl/OrdinationsAI-inline_2022_03_01.zip"/>
+        <zip destfile="${ordinationsAI_dist_file}"
+             description="Dist collection for OrdinationsAI"
              update="false"
-             basedir="${standard.target.dir}/wsdl" includes="DosageAI_2022_03_01-collection.zip"/>
-    	<zip destfile="${dosageAI_dist_inline_file}"
-    	             description="Dist inline collection for DosageAI"
+             basedir="${standard.target.dir}/wsdl" includes="OrdinationsAI_2022_03_01-collection.zip"/>
+    	<zip destfile="${ordinationsAI_dist_inline_file}"
+    	             description="Dist inline collection for OrdinationsAI"
     	             update="false"
-    	             basedir="${standard.target.dir}/wsdl" includes="DosageAI-inline_2022_03_01.wsdl"/> 
+    	             basedir="${standard.target.dir}/wsdl" includes="OrdinationsAI-inline_2022_03_01.wsdl"/>
 
         <dist_zips-macro version-yymmdd="2013_06_01" version="1.4.2"/>
         <dist_zips-macro version-yymmdd="2015_01_01" version="1.4.4"/>
@@ -573,7 +573,7 @@
         <codegen wsdlfilename="${standard.target.dir}/wsdl/DumpRestore-inline_2013_01_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/DumpRestore-inline_2019_09_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <codegen wsdlfilename="${standard.target.dir}/wsdl/BatchData-inline_2022_02_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
-        <codegen wsdlfilename="${standard.target.dir}/wsdl/DosageAI-inline_2022_03_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
+        <codegen wsdlfilename="${standard.target.dir}/wsdl/OrdinationsAI-inline_2022_03_01.wsdl" output="${standard.target.dir}/gentestsrc-tmp" unpackClasses="true" serverSide="false" databindingname="xmlbeans"/>
         <!-- IMPORTANT: whenever a new <codegen> element regarding a new wsdl-file is added to this section, remember to add an <exec>-element validating the wsdl in the "validate-wsdl" target below -->
 
         <copy todir="${standard.target.dir}/gentestsrc" encoding="${codegen-encoding}" outputencoding="UTF-8">
@@ -741,7 +741,7 @@
 
 		<validatewsdl-macro wsdlfilename="BatchService-inline_2022_02_01"/>
 
-        <validatewsdl-macro wsdlfilename="DosageAI-inline_2022_03_01"/>
+        <validatewsdl-macro wsdlfilename="OrdinationsAI-inline_2022_03_01"/>
 	</target>
 	
 	<target name="generate-nsf-wsdl" depends="generate">
