FMK-7598 FMK 1.6.0 bygges nu vha. maven

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ bin
 .idea/
 cssrc/
 .metadata/
+fmk-160-idws-schema-classes/target/
+fmk-160-schema-classes/target/
+mc160_wsdl/target/
+mc160idws_wsdl/target/
+SchemaLoader/target/
