Added snapshot repository

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
     </repositories>
 
     <distributionManagement>
+        <snapshotRepository>
+            <id>trifork.snapshots</id>
+            <name>Trifork internal snapshot Nexus</name>
+            <url>https://ci.fmk.netic.dk/nexus/repository/snapshots/</url>
+        </snapshotRepository>
         <repository>
             <id>trifork.internal</id>
             <name>Trifork internal Nexus</name>
