FMK-8070 bugfix 2, opbygning af jars

--- a/build.xml
+++ b/build.xml
@@ -601,6 +601,7 @@
                 <include name="assertion/**/*.class"/>
                 <include name="org/**/*.class"/>
                 <exclude name="dk/dkma/**"/>
+                <exclude name="dk/fmk_teknik/**"/>
                 <include name="dk/**/*.class"/>
             </fileset>
         </jar>
@@ -611,6 +612,7 @@
             </fileset>
             <fileset dir="${standard.target.dir}/genclasses/">
                 <include name="dk/dkma/**/*.class"/>
+                <include name="dk/fmk_teknik/**/*.class"/>
             </fileset>
         </jar>
     </target>
