--- a/SchemaLoader/pom.xml
+++ b/SchemaLoader/pom.xml
@@ -29,13 +29,41 @@
         </dependency>
 
         <dependency>
-            <groupId>dk.sosi.seal</groupId>
+            <groupId>com.trifork.seal</groupId>
             <artifactId>seal</artifactId>
-            <version>2.2.1</version>
+            <version>2.6.24.5</version>
             <exclusions>
                 <exclusion>
-                    <groupId>axis</groupId>
-                    <artifactId>*</artifactId>
+                    <groupId>commons-logging</groupId>
+                    <artifactId>commons-logging</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>commons-httpclient</groupId>
+                    <artifactId>commons-httpclient</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.axis</groupId>
+                    <artifactId>axis-saaj</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.bouncycastle</groupId>
+                    <artifactId>bcprov-jdk15on</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.bouncycastle</groupId>
+                    <artifactId>bcpkix-jdk15on</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>commons-codec</groupId>
+                    <artifactId>commons-codec</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.santuario</groupId>
+                    <artifactId>xmlsec</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -74,7 +102,7 @@
         <dependency>
             <groupId>com.trifork</groupId>
             <artifactId>xmlobject</artifactId>
-            <version>1.17</version>
+            <version>1.24</version>
         </dependency>
 
         <dependency>
