--- a/fmk-160-schema-classes/pom.xml
+++ b/fmk-160-schema-classes/pom.xml
@@ -40,6 +40,11 @@
                 </executions>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>target/generated-sources/axis2/wsdl2code/resources</directory>
+            </resource>
+        </resources>
     </build>
 
     <dependencies>
