--- a/mc160idws_wsdl/pom.xml
+++ b/mc160idws_wsdl/pom.xml
@@ -31,9 +31,9 @@
                         <id>mkdir-wsdl</id>
                         <phase>generate-sources</phase>
                         <configuration>
-                            <tasks>
+                            <target>
                                 <mkdir dir="target/resources/wsdl"/>
-                            </tasks>
+                            </target>
                         </configuration>
                         <goals>
                             <goal>run</goal>
