--- a/mc160idws_wsdl/pom.xml
+++ b/mc160idws_wsdl/pom.xml
@@ -26,6 +26,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>mkdir-wsdl</id>
