More JTE requirements

--- a/fmk-160-idws-schema-classes/pom.xml
+++ b/fmk-160-idws-schema-classes/pom.xml
@@ -5,13 +5,13 @@
     <parent>
         <artifactId>medicinkortet-schema</artifactId>
         <groupId>dk.medicinkortet</groupId>
-        <version>1.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.trifork</groupId>
     <artifactId>fmk-160-idws-schema-classes</artifactId>
-    <version>${fmkschemaversion}</version>
+    <version>${revision}</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>dk.medicinkortet</groupId>
             <artifactId>MedicineCard_Idws_2022_01_01</artifactId>
-            <version>${fmkschemaversion}</version>
+            <version>${revision}</version>
         </dependency>
     </dependencies>
 
