--- a/SchemaLoader/pom.xml
+++ b/SchemaLoader/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>dk.medicinkortet</groupId>
         <artifactId>medicinkortet-schema</artifactId>
-        <version>1.0</version>
+        <version>${revision}</version>
     </parent>
 
     <groupId>dk.medicinkortet</groupId>
     <artifactId>SchemaLoader</artifactId>
-    <version>1.0</version>
+    <version>${revision}</version>
     <name>SchemaLoader</name>
 
     <dependencies>
