--- a/mc160_wsdl/pom.xml
+++ b/mc160_wsdl/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>dk.medicinkortet</groupId>
         <artifactId>medicinkortet-schema</artifactId>
-        <version>1.0</version>
+        <version>${revision}</version>
     </parent>
 
     <groupId>dk.medicinkortet</groupId>
     <artifactId>MedicineCard_2022_01_01</artifactId>
-    <version>${fmkschemaversion}</version>
+    <version>${revision}</version>
 
     <dependencies>
         <dependency>
