Change CreateEffectuationOnDrugMedication to CreateEffectuationOnWarrant

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ fmk-160-schema-classes/target/
 mc160_wsdl/target/
 mc160idws_wsdl/target/
 SchemaLoader/target/
+.flattened-pom.xml
+fmk-160-idws-schema-classes/.flattened-pom.xml
+fmk-160-schema-classes/.flattened-pom.xml
+mc160_wsdl/.flattened-pom.xml
+mc160idws_wsdl/.flattened-pom.xml
+SchemaLoader/.flattened-pom.xml
