Publish all schemas seperately

--- a/mc160_wsdl/pom.xml
+++ b/mc160_wsdl/pom.xml
@@ -86,9 +86,10 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
-                            <appendAssemblyId>false</appendAssemblyId>
+                            <appendAssemblyId>true</appendAssemblyId>
+                            <attach>true</attach>
                             <descriptors>
-                                <descriptor>src/assembly/mc160.xml</descriptor>
+                                <descriptor>${project.parent.basedir}/src/assembly/mc160.xml</descriptor>
                             </descriptors>
                             <finalName>MedicineCard_2022_01_01-collection</finalName>
                         </configuration>
@@ -100,10 +101,11 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
-                            <appendAssemblyId>false</appendAssemblyId>
+                            <appendAssemblyId>true</appendAssemblyId>
+                            <attach>true</attach>
                             <finalName>MedicineCard_2022_01_01-inline</finalName>
                             <descriptors>
-                                <descriptor>src/assembly/mc160-inline.xml</descriptor>
+                                <descriptor>${project.parent.basedir}/src/assembly/mc160-inline.xml</descriptor>
                             </descriptors>
                         </configuration>
                     </execution>
@@ -114,9 +116,10 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
-                            <appendAssemblyId>false</appendAssemblyId>
+                            <appendAssemblyId>true</appendAssemblyId>
+                            <attach>true</attach>
                             <descriptors>
-                                <descriptor>src/assembly/por160.xml</descriptor>
+                                <descriptor>${project.parent.basedir}/src/assembly/por160.xml</descriptor>
                             </descriptors>
                             <finalName>PatientRegistration_2022_01_01-collection</finalName>
                         </configuration>
@@ -128,10 +131,11 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
-                            <appendAssemblyId>false</appendAssemblyId>
+                            <appendAssemblyId>true</appendAssemblyId>
+                            <attach>true</attach>
                             <finalName>PatientRegistration_2022_01_01-inline</finalName>
                             <descriptors>
-                                <descriptor>src/assembly/por160-inline.xml</descriptor>
+                                <descriptor>${project.parent.basedir}/src/assembly/por160-inline.xml</descriptor>
                             </descriptors>
                         </configuration>
                     </execution>
