Publish xua wsdl for fmk-1.4.6.E6

--- a/build.xml
+++ b/build.xml
@@ -153,6 +153,7 @@
         <!--organize-idws-xua-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01"-->
         <!--organize-idws-xua-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E2"-->
         <!--organize-idws-xua-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E3"-->
+        <organize-idws-xua-schemas-macro wsdlname="MedicineCard" versiondate="2015_06_01_E6"/>
 
         <organize-idws-xua-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01"/>
         <!--organize-idws-xua-schemas-macro wsdlname="EffectuationOrdering" versiondate="2015_01_01_E2"-->
