--- a/mc160_wsdl/pom.xml
+++ b/mc160_wsdl/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>dk.medicinkortet</groupId>
             <artifactId>SchemaLoader</artifactId>
-            <version>1.0</version>
+            <version>${revision}</version>
         </dependency>
     </dependencies>
 
