Skriv hvilken fil der uploades

--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
                 <configuration>
                     <source><![CDATA[
                         def maxMessageLength = 2500000
-                        println("Uploading ${properties['inline']}")
+                        println("Uploading ${properties['infile']}")
                         println("Creating request")
                         def template = new File("src/dk/medicinkortet/xmlschema/dokuwikitemplate_data.xml").text
                         def templateStart = new File("src/dk/medicinkortet/xmlschema/dokuwikitemplate_start.xml").text
