FMK-11421 ret xslt så elementer med <extension> også kommer med

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ fmk-160-schema-classes/.flattened-pom.xml
 mc160_wsdl/.flattened-pom.xml
 mc160idws_wsdl/.flattened-pom.xml
 SchemaLoader/.flattened-pom.xml
+tmp/
