FMK-11430 Fix dobbelt-navne i zip filer der uploades til FMKResources

--- a/mc160_wsdl/pom.xml
+++ b/mc160_wsdl/pom.xml
@@ -86,7 +86,7 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
-                            <appendAssemblyId>true</appendAssemblyId>
+                            <appendAssemblyId>false</appendAssemblyId>
                             <attach>true</attach>
                             <descriptors>
                                 <descriptor>${project.parent.basedir}/src/assembly/mc160.xml</descriptor>
@@ -101,9 +101,9 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
-                            <appendAssemblyId>true</appendAssemblyId>
+                            <appendAssemblyId>false</appendAssemblyId>
                             <attach>true</attach>
-                            <finalName>MedicineCard_2022_01_01-inline</finalName>
+                            <finalName>MedicineCard-inline_2022_01_01</finalName>
                             <descriptors>
                                 <descriptor>${project.parent.basedir}/src/assembly/mc160-inline.xml</descriptor>
                             </descriptors>
@@ -116,7 +116,7 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
-                            <appendAssemblyId>true</appendAssemblyId>
+                            <appendAssemblyId>false</appendAssemblyId>
                             <attach>true</attach>
                             <descriptors>
                                 <descriptor>${project.parent.basedir}/src/assembly/por160.xml</descriptor>
@@ -131,9 +131,9 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
-                            <appendAssemblyId>true</appendAssemblyId>
+                            <appendAssemblyId>false</appendAssemblyId>
                             <attach>true</attach>
-                            <finalName>PatientRegistration_2022_01_01-inline</finalName>
+                            <finalName>PatientRegistration-inline_2022_01_01</finalName>
                             <descriptors>
                                 <descriptor>${project.parent.basedir}/src/assembly/por160-inline.xml</descriptor>
                             </descriptors>
