FMK-11430 Tilføjet manglende POR IDWS og fixet nogle inline navne

--- a/mc160_wsdl/pom.xml
+++ b/mc160_wsdl/pom.xml
@@ -103,7 +103,7 @@
                         <configuration>
                             <appendAssemblyId>false</appendAssemblyId>
                             <attach>true</attach>
-                            <finalName>MedicineCard-inline_2022_01_01</finalName>
+                            <finalName>MedicineCard-inline_2022_01_01.wsdl</finalName>
                             <descriptors>
                                 <descriptor>${project.parent.basedir}/src/assembly/mc160-inline.xml</descriptor>
                             </descriptors>
@@ -133,7 +133,7 @@
                         <configuration>
                             <appendAssemblyId>false</appendAssemblyId>
                             <attach>true</attach>
-                            <finalName>PatientRegistration-inline_2022_01_01</finalName>
+                            <finalName>PatientRegistration-inline_2022_01_01.wsdl</finalName>
                             <descriptors>
                                 <descriptor>${project.parent.basedir}/src/assembly/por160-inline.xml</descriptor>
                             </descriptors>
