--- a/fmk-160-schema-classes/pom.xml
+++ b/fmk-160-schema-classes/pom.xml
@@ -40,6 +40,7 @@
                             <xnocompile>true</xnocompile>
                             <bindingDirectory>../etc/jaxb</bindingDirectory>
                             <bindingFiles>
+                                <bindingFile>Shared_bindings.xjb</bindingFile>
                                 <bindingFile>MedicineCard_bindings.xjb</bindingFile>
                             </bindingFiles>
                         </configuration>
@@ -58,6 +59,7 @@
                             <xnocompile>true</xnocompile>
                             <bindingDirectory>../etc/jaxb</bindingDirectory>
                             <bindingFiles>
+                                <bindingFile>Shared_bindings.xjb</bindingFile>
                                 <bindingFile>PatientRegistration_bindings.xjb</bindingFile>
                             </bindingFiles>
                         </configuration>
