FMK-11424 added bindings to jaxb to fix element name clashes

--- a/fmk-160-schema-classes/pom.xml
+++ b/fmk-160-schema-classes/pom.xml
@@ -42,6 +42,9 @@
                             <bindingFiles>
                                 <bindingFile>Shared_bindings.xjb</bindingFile>
                                 <bindingFile>MedicineCard_bindings.xjb</bindingFile>
+                                <bindingFile>GetAcuteDispensingPeriodsRequest_bindings.xjb</bindingFile>
+                                <bindingFile>ListDispensingPatientsRequest_bindings.xjb</bindingFile>
+                                <bindingFile>ListPackingGroupsRequest_bindings.xjb</bindingFile>
                             </bindingFiles>
                         </configuration>
                     </execution>
