--- a/fmk-160-schema-classes/pom.xml
+++ b/fmk-160-schema-classes/pom.xml
@@ -17,6 +17,8 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <medicineCardEpisodeRaw>${project.build.directory}/generated-sources/wsimport/MedicineCard.raw.episode</medicineCardEpisodeRaw>
+        <medicineCardEpisode>${project.build.directory}/generated-sources/wsimport/MedicineCard.episode</medicineCardEpisode>
     </properties>
 
     <build>
@@ -46,11 +48,15 @@
                                 <bindingFile>ListDispensingPatientsRequest_bindings.xjb</bindingFile>
                                 <bindingFile>ListPackingGroupsRequest_bindings.xjb</bindingFile>
                             </bindingFiles>
+                            <xjcArgs>
+                                <xjcArg>-episode</xjcArg>
+                                <xjcArg>${medicineCardEpisodeRaw}</xjcArg>
+                            </xjcArgs>
                         </configuration>
                     </execution>
                     <execution>
                         <id>POR</id>
-                        <phase>generate-sources</phase>
+                        <phase>process-classes</phase>
                         <goals>
                             <goal>wsimport</goal>
                         </goals>
@@ -63,10 +69,33 @@
                             <xnocompile>true</xnocompile>
                             <bindingDirectory>../etc/jaxb</bindingDirectory>
                             <bindingFiles>
+                                <bindingFile>${medicineCardEpisode}</bindingFile>
                                 <bindingFile>Shared_bindings.xjb</bindingFile>
-                                <bindingFile>PatientRegistration_bindings.xjb</bindingFile>
                             </bindingFiles>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>sanitize-episode</id>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <target>
+                                <mkdir dir="${project.build.directory}/generated-sources/wsimport"/>
+                                <copy file="${medicineCardEpisodeRaw}" tofile="${medicineCardEpisode}" overwrite="true"/>
+                                <replaceregexp file="${medicineCardEpisode}"
+                                               match="map=&quot;false&quot;"
+                                               replace=""
+                                               flags="g"/>
+                            </target>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
