--- a/fmk-160-schema-classes/pom.xml
+++ b/fmk-160-schema-classes/pom.xml
@@ -56,7 +56,7 @@
                     </execution>
                     <execution>
                         <id>POR</id>
-                        <phase>process-classes</phase>
+                        <phase>process-sources</phase>
                         <goals>
                             <goal>wsimport</goal>
                         </goals>
